PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-29_erreur_return/gcc-compile.txt
input.c:3:12: error: expected ';' after expression
    var = 5
           ^
           ;
input.c:6:1: error: expected identifier or '('
return var;
^
2 errors generated.

return code: 1
